--- a/packages/banner/package.json
+++ b/packages/banner/package.json
@@ -19,6 +19,7 @@
     "build": "hig-scripts-build"
   },
   "dependencies": {
-    "hig-react": "^0.29.0-alpha"
+    "hig-react": "^0.29.0-alpha",
+    "react-lifecycles-compat": "^2.0.0"
   }
 }
