--- a/packages/notifications-flyout/package.json
+++ b/packages/notifications-flyout/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hig/top-nav",
+  "name": "@hig/notifications-flyout",
   "version": "0.1.0-alpha",
   "description": "HIG Top Navigation",
   "author": "Autodesk Inc.",
@@ -13,7 +13,6 @@
   "files": ["build/*"],
   "devDependencies": {
     "@hig/babel-preset": "0.1.0",
-    "@hig/notifications-flyout": "^0.1.0-alpha",
     "@hig/scripts": "^0.1.0",
     "@hig/styles": "^0.1.0-alpha",
     "@hig/eslint-config": "0.1.0"
@@ -27,14 +26,13 @@
     "lint": "eslint ./src/**/*"
   },
   "dependencies": {
-    "@hig/notifications-indicator": "^0.1.0-alpha",
-    "@hig/avatar": "^0.1.0-alpha",
     "@hig/icon": "^0.1.0-alpha",
     "@hig/icon-button": "^0.1.0-alpha",
     "@hig/icons": "^0.1.0-alpha",
     "@hig/themes": "^0.1.0-alpha",
     "@hig/typography": "^0.1.0-alpha",
-    "react-lifecycles-compat": "^2.0.0"
+    "react-lifecycles-compat": "^2.0.0",
+    "hig-react": "0.29.0-alpha"
   },
   "eslintConfig": { "extends": "@hig" },
   "eslintIgnore": ["*.scss", "*.json"],
