--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "create-dependency-hash": "cat yarn.lock > .dependency-hash && ls ./packages >> .dependency-hash",
     "lint": "lerna run lint --stream",
     "publish-canary": "lerna publish --canary --yes --exact",
-    "update-packages": "lerna publish --skip-npm",
+    "release": "lerna run release --concurrency 1 --scope @hig/* --stream",
     "extract": "yarn run extract:dependencies && yarn run extract:builds",
     "extract:builds": "bash scripts/extract-builds.sh",
     "extract:dependencies": "bash scripts/extract-dependencies.sh",
