--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -23,6 +23,7 @@
     "@hig/eslint-config": "^0.1.0",
     "@hig/icon": "^0.1.1",
     "@hig/scripts": "^0.1.0",
+    "@hig/semantic-release-config": "^0.1.0",
     "@hig/styles": "^0.1.1"
   },
   "peerDependencies": {
@@ -30,7 +31,14 @@
   },
   "scripts": {
     "build": "hig-scripts-build",
-    "lint": "eslint src --color --ext .js,.jsx"
+    "lint": "hig-scripts-lint",
+    "release": "hig-scripts-release"
+  },
+  "eslintConfig": {
+    "extends": "@hig"
+  },
+  "release": {
+    "extends": "@hig/semantic-release-config"
   },
   "babel": {
     "env": {
@@ -40,8 +48,5 @@
         ]
       }
     }
-  },
-  "eslintConfig": {
-    "extends": "@hig"
   }
 }
