--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -19,15 +19,20 @@
     "@hig/babel-preset": "^0.1.0",
     "@hig/eslint-config": "^0.1.0",
     "@hig/scripts": "^0.1.0",
+    "@hig/semantic-release-config": "^0.1.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.9.0"
   },
   "scripts": {
     "build": "node ./scripts/build.js",
-    "lint": "eslint src --color --ext .js,.jsx"
+    "lint": "hig-scripts-lint",
+    "release": "hig-scripts-release"
   },
   "eslintConfig": {
     "extends": "@hig"
+  },
+  "release": {
+    "extends": "@hig/semantic-release-config"
   },
   "babel": {
     "env": {
