--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -29,12 +29,14 @@
     "@hig/babel-preset": "^0.1.0",
     "@hig/eslint-config": "^0.1.0",
     "@hig/scripts": "^0.1.0",
+    "@hig/semantic-release-config": "^0.1.0",
     "@hig/styles": "^0.1.1",
     "delay": "^2.0.0"
   },
   "scripts": {
     "build": "hig-scripts-build",
-    "lint": "eslint src --color --ext .js,.jsx"
+    "lint": "hig-scripts-lint",
+    "release": "hig-scripts-release"
   },
   "eslintConfig": {
     "extends": "@hig",
@@ -53,6 +55,9 @@
       "react/no-unused-prop-types": 1,
       "react/sort-comp": 1
     }
+  },
+  "release": {
+    "extends": "@hig/semantic-release-config"
   },
   "babel": {
     "env": {
