--- a/packages/semantic-release-config/package.json
+++ b/packages/semantic-release-config/package.json
@@ -7,6 +7,7 @@
   "repository": "https://github.com/Autodesk/hig",
   "license": "Apache-2.0",
   "dependencies": {
+    "@semantic-release/changelog": "^2.0.2",
     "@semantic-release/exec": "^2.2.4",
     "@semantic-release/github": "^4.1.0",
     "@semantic-release/npm": "^3.2.0",
