--- a/packages/semantic-release-config/package.json
+++ b/packages/semantic-release-config/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@semantic-release/changelog": "^2.0.2",
     "@semantic-release/exec": "^2.2.4",
+    "@semantic-release/git": "^5.0.0",
     "@semantic-release/github": "^4.1.0",
     "@semantic-release/npm": "^3.2.0",
     "execa": "^0.10.0",
