--- a/packages/top-nav/package.json
+++ b/packages/top-nav/package.json
@@ -17,16 +17,6 @@
   "files": [
     "build/*"
   ],
-  "devDependencies": {
-    "@hig/babel-preset": "^0.1.0",
-    "@hig/eslint-config": "^0.1.0",
-    "@hig/scripts": "^0.1.1",
-    "@hig/semantic-release-config": "^0.1.0",
-    "@hig/styles": "^0.1.1"
-  },
-  "peerDependencies": {
-    "react": "^15.4.1 || ^16.3.2"
-  },
   "scripts": {
     "build": "hig-scripts-build",
     "lint": "hig-scripts-lint",
@@ -34,10 +24,21 @@
   },
   "dependencies": {
     "@hig/avatar": "^0.1.1",
+    "@hig/flyout": "^0.1.0",
     "@hig/icon": "^0.1.1",
     "classnames": "^2.2.5",
-    "hig-react": "0.28.35",
     "prop-types": "^15.6.1"
+  },
+  "devDependencies": {
+    "@hig/babel-preset": "^0.1.0",
+    "@hig/eslint-config": "^0.1.0",
+    "@hig/notifications-flyout": "^0.1.1-alpha",
+    "@hig/scripts": "^0.1.1",
+    "@hig/semantic-release-config": "^0.1.0",
+    "@hig/styles": "^0.1.1"
+  },
+  "peerDependencies": {
+    "react": "^15.4.1 || ^16.3.2"
   },
   "eslintConfig": {
     "extends": "@hig"
